--- a/.github/workflows/Tests.yml
+++ b/.github/workflows/Tests.yml
@@ -93,8 +93,23 @@ jobs:
         run: |
           docker build -t local-maps .
 
-      # - name: Run scraper
-      #   run: docker run -v $PWD/output:/output local-maps maps2zim --library-url https://geo.libretexts.org --name libretexts.org_en_geo --creator LibreTexts --title "LibreTexts Geosciences" --description "Geosciences courses from libretexts.org" --root-page-id 28207 --file-name "tests_en_libretexts-geo"
+      - name: Install zimtools
+        run: |
+          wget -qO- https://download.openzim.org/release/zim-tools/zim-tools_linux-x86_64.tar.gz | tar xvz
+          mv zim-tools_linux-x86_64-*/zim* /usr/local/bin/
 
-      # - name: Run integration test suite
-      #   run: docker run -v $PWD/scraper/tests-integration:/src/scraper/tests-integration -v $PWD/output:/output -e ZIM_FILE_PATH=/output/tests_en_libretexts-geo.zim local-maps bash -c "pip install pytest; pytest -v /src/scraper/tests-integration"
+      - name: Run scraper
+        run: docker run -v $PWD/output:/output local-maps maps2zim --area monaco --name maps_en_test --title "Maps Test" --description "Test ZIM for maps" --file-name "tests_en_maps" --default-view=43.74,7.43,13
+
+      - name: archive ZIM
+        uses: actions/upload-artifact@v6
+        with:
+          name: tests_en_maps.zim
+          path: output/tests_en_maps.zim
+          retention-days: 7
+
+      - name: Run zimcheck
+        run: zimcheck $PWD/output/tests_en_maps.zim
+
+      - name: Run integration test suite
+        run: docker run -v $PWD/scraper/tests-integration:/src/scraper/tests-integration -v $PWD/output:/output -e ZIM_FILE_PATH=/output/tests_en_maps.zim local-maps bash -c "pip install pytest; pytest -v /src/scraper/tests-integration"
